--- a/Assignments/CarolineRen_TSA_A01_Sp23.Rmd
+++ b/Assignments/CarolineRen_TSA_A01_Sp23.Rmd
@@ -19,12 +19,13 @@ When you have completed the assignment, **Knit** the text and code into a single
 
 Q1. What are your previous experiences with time series analysis, R, and Git? 
 
-> Answer: 
+> Answer: I have no experience with time series analysis. But I have sufficient practice of using R in my previous classes (Stat) and I have used Git before.
 
 
 Q2. (Only if you choose to use git) Provide a link below to your forked course repository in GitHub. Make sure you have pulled all recent changes from the course repository and that you have updated your course README file as instructed on the recorded video "Getting started with Git and Github". 
 
-> Answer: 
+> Answer: https://github.com/CaroroR/TimeSeriesAnalysis_Sp23.git
+https://github.com/CaroroR/TimeSeriesAnalysis_Sp23
 
 
 Q3. For this part we just want to see the path to your R project. No need to do anything. The output will be automatically generated once you knit you file. 
