--- a/Assignments/CarolineRen_TSA_A02_Sp23.Rmd
+++ b/Assignments/CarolineRen_TSA_A02_Sp23.Rmd
@@ -20,6 +20,14 @@ When you have completed the assignment, **Knit** the text and code into a single
 
 R packages needed for this assignment:"forecast","tseries", and "dplyr". Install these packages, if you haven't done yet. Do not forget to load them before running your script, since they are NOT default packages.\\
 
+```{r, include = FALSE}
+
+library(tinytex)
+
+options( tinytex.verbose = TRUE)
+
+```
+
 ```{r}
 #Load/install required package here
 library(forecast)
@@ -34,7 +42,7 @@ Consider the data provided in the spreadsheet "Table_10.1_Renewable_Energy_Produ
 
 ```{r}
 #Importing data set
-energy_data <- read.csv(file="../Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source-Edit.csv", header = TRUE, dec = ".", sep=",",stringsAsFactors = TRUE) 
+energy_data <- read.csv(file="./Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source-Edit.csv", header = TRUE, dec = ".", sep=",",stringsAsFactors = TRUE) 
 
 #check that colnames are already stored because we deleted the units line so we were able to automatically import it
 colnames(energy_data)
