--- a/Assignments/CarolineRen_TSA_A03_Sp23.Rmd
+++ b/Assignments/CarolineRen_TSA_A03_Sp23.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "ENV 790.30 - Time Series Analysis for Energy Data | Spring 2023"
 subtitle: "Assignment 3 - Due date 02/10/23"
-author: "Student Name"
+author: "Caroline Ren"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -32,10 +32,30 @@ R packages needed for this assignment:"forecast","tseries", and "Kendall". Insta
 
 ```{r}
 #Load/install required package here
-
+library(forecast)
+library(tseries)
+library(dplyr)
+library(Kendall)
 ```
 
 ##Trend Component
+
+```{r}
+#Importing data set
+energy_data <- read.csv(file="./Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source-Edit.csv", header = TRUE, dec = ".", sep=",",stringsAsFactors = TRUE) 
+
+#check that colnames are already stored because we deleted the units line so we were able to automatically import it
+colnames(energy_data)
+head(energy_data)
+
+#Use dplyr select
+energy_data1 <- energy_data %>% select(1,4,5,6) 
+
+nenergy <- ncol(energy_data1)-1
+nobs <- nrow(energy_data1) 
+
+head(energy_data1)
+```
 
 ### Q1
 Create a plot window that has one row and three columns. And then for each object on your data frame, fill the plot window with time series plot, ACF and PACF. You may use the some code form A2, but I want all three plots on the same window this time. (Hint: use par() function)
