--- a/Lessons/M3_TrendSeasonality_Complete.Rmd
+++ b/Lessons/M3_TrendSeasonality_Complete.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "M3: Exercise"
+title: 'M3: Exercise'
 author: "Luana Lima"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 ---
 
 ## Setting R code chunk options
@@ -32,7 +34,7 @@ Let's continue working with our inflow data for reservoirs in Brazil.
 ```{r}
 
 #Importing time series data from text file#
-raw_inflow_data <- read.table(file="./Data/inflowtimeseries.txt",header=FALSE,skip=0)
+raw_inflow_data <- read.table(file="../Data/inflowtimeseries.txt",header=FALSE,skip=0)
 
 #Trim the table to include only columns you need
 nhydro <- ncol(raw_inflow_data)-2
