--- a/Lessons/M6_SeasonalARIMA.Rmd
+++ b/Lessons/M6_SeasonalARIMA.Rmd
@@ -154,10 +154,16 @@ I will not cover the hypothesis test associated with deterministic and stochasti
 ns_diff <- nsdiffs(ts_electricity_price[,"Residential"])
 cat("Number of seasonal differencing needed: ",ns_diff)
 
+ns_diff
+
 #Lets difference the series once at lag 12 to remove the seasonal trend.
 residential_price_seas_diff <- diff(ts_electricity_price[,"Residential"],lag=12, differences=1)
-residential_price_trend_diff <- diff(ts_electricity_price[,"Residential"],lag =1, differences=1) #diff done on orig series
+residential_price_trend_diff <- diff(ts_electricity_price[,"Residential"],lag =1, differences=1) #diff done on orig series #differentiate my series once at lag 1. now we need to differentiate at lag 12 and just do it once.
 residential_price_both_diff <- diff(residential_price_trend_diff,lag =12, differences=1)
+
+residential_price_seas_diff
+residential_price_trend_diff
+residential_price_both_diff
 
 #Check autocorrelation plots for differenced series
 #Comparing ACFs
