--- a/Assignments/CarolineRen_TSA_A06_Sp23.Rmd
+++ b/Assignments/CarolineRen_TSA_A06_Sp23.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "ENV 790.30 - Time Series Analysis for Energy Data | Spring 2023"
+author: "Caroline Ren"
 subtitle: "Assignment 6 - Due date 03/06/23"
-author: "Student Name"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 geometry: margin=2.54cm
 ---
   
@@ -26,6 +28,9 @@ Packages needed for this assignment: "forecast","tseries". Do not forget to load
 
 ```{r}
 #Load/install required package here
+library(forecast)
+library(tseries)
+
 
 ```
 
@@ -34,13 +39,13 @@ Packages needed for this assignment: "forecast","tseries". Do not forget to load
 Describe the important characteristics of the sample autocorrelation function (ACF) plot and the partial sample autocorrelation function (PACF) plot for the following models: 
 
 
-* AR(2)
+* AR(2) 
 
-> Answer: 
+> Answer: For AR models, ACF will decay exponentially with time. The PACF will identify the order of the AR model.
 
 * MA(1)
 
-> Answer: 
+> Answer: For MA models ACF will identify the order of the MA model. The PACF will decay exponentially.
 
 
 
@@ -48,13 +53,30 @@ Describe the important characteristics of the sample autocorrelation function (A
 Recall that the non-seasonal ARIMA is described by three parameters ARIMA$(p,d,q)$ where $p$ is the order of the autoregressive component, $d$ is the number of times the series need to be differenced to obtain stationarity and $q$ is the order of the moving average component. If we don't need to difference the series, we don't need to specify the "I" part and we can use the short version, i.e., the ARMA$(p,q)$. Consider three models: ARMA(1,0), ARMA(0,1) and ARMA(1,1) with parameters $\phi=0.6$ and $\theta= 0.9$. The $\phi$ refers to the AR coefficient and the $\theta$ refers to the MA coefficient. Use R to generate $n=100$ observations from each of these three models
 
 ```{r}
+#ARMA(1,0)
 
+ARMAmodel_1<- arima.sim(model=list(ar=0.6), n=100) #the AR coefficient is 0.6
+
+#ARMA(0,1)
+
+ARMAmodel_2<- arima.sim(model=list(ma=0.9), n=100) #the MA coefficient is 0.9
+
+#ARMA(1,1)
+ARMAmodel_3<- arima.sim(model=list(ar=0.6, ma=0.9), n=100) 
+#the AR coefficient is 0.6,the MA coefficient is 0.9
 ```
 
 
 (a) Plot the sample ACF for each of these models in one window to facilitate comparison (Hint: use command $par(mfrow=c(1,3))$ that divides the plotting window in three columns).  
 
 ```{r}
+par(mfrow=c(1,3))
+ACF_Plot <- Acf(ARMAmodel_1, lag = 40, 
+                main = "ACF Model 1")
+ACF_Plot <- Acf(ARMAmodel_2, lag = 40, 
+                main = "ACF Model 2")
+ACF_Plot <- Acf(ARMAmodel_3, lag = 40, 
+                main = "ACF Model 3")
 
 ```
 
@@ -62,25 +84,98 @@ Recall that the non-seasonal ARIMA is described by three parameters ARIMA$(p,d,q
 (b) Plot the sample PACF for each of these models in one window to facilitate comparison.  
 
 ```{r}
-
+par(mfrow=c(1,3))
+PACF_Plot <- Pacf(ARMAmodel_1, lag = 40, 
+                  main = "PACF Model 1")
+PACF_Plot <- Pacf(ARMAmodel_2, lag = 40, 
+                  main = "PACF Model 2")
+PACF_Plot <- Pacf(ARMAmodel_3, lag = 40, 
+                  main = "PACF Model 3")
 ```
 
 (c) Look at the ACFs and PACFs. Imagine you had these plots for a data set and you were asked to identify the model, i.e., is it AR, MA or ARMA and the order of each component. Would you be identify them correctly? Explain your answer.
 
-> Answer:
+> Answer: Model 1 and 3 are AR models, because their ACF decays. Model 1 has order = 1, and model 3 has order = 3. Model 2 is MA model, because its PACF decays, and based on its ACF there is one significant lag, so order = 1.
 
 (d) Compare the ACF and PACF values R computed with the theoretical values you provided for the coefficients. Do they match? Explain your answer.
 
-> Answer: 
+```{r}
+Model_autofit <- auto.arima(ARMAmodel_1)
+print(Model_autofit)
+
+```
+
+```{r}
+Model_autofit <- auto.arima(ARMAmodel_2)
+print(Model_autofit)
+
+```
+
+```{r}
+Model_autofit <- auto.arima(ARMAmodel_3)
+print(Model_autofit)
+
+```
+
+> Answer: The answers have quite wide discrepancy. The reason might be that we need to differentiate the model further.
 
 
 (e) Increase number of observations to $n=1000$ and repeat parts (a)-(d).
 
 ```{r}
+#ARMA(1,0)
+
+ARMAmodel2_1<- arima.sim(model=list(ar=0.6), n=1000) #the AR coefficient is 0.6
+
+#ARMA(0,1)
+
+ARMAmodel2_2<- arima.sim(model=list(ma=0.9), n=1000) #the MA coefficient is 0.9
+
+#ARMA(1,1)
+ARMAmodel2_3<- arima.sim(model=list(ar=0.6, ma=0.9), n=1000) 
+#the AR coefficient is 0.6,the MA coefficient is 0.9
+```
+
+```{r}
+par(mfrow=c(1,3))
+ACF_Plot <- Acf(ARMAmodel2_1, lag = 40, 
+                main = "ACF Model 1")
+ACF_Plot <- Acf(ARMAmodel2_2, lag = 40, 
+                main = "ACF Model 2")
+ACF_Plot <- Acf(ARMAmodel2_3, lag = 40, 
+                main = "ACF Model 3")
+```
+
+```{r}
+par(mfrow=c(1,3))
+PACF_Plot <- Pacf(ARMAmodel2_1, lag = 40, 
+                  main = "PACF Model 1")
+PACF_Plot <- Pacf(ARMAmodel2_2, lag = 40, 
+                  main = "PACF Model 2")
+PACF_Plot <- Pacf(ARMAmodel2_3, lag = 40, 
+                  main = "PACF Model 3")
+```
+Because ACF for Model2_1 and Model2_3 decay exponentially, so we know they are AR models. Based on PACF, model2_1 has an order of 1, model2_3 has a order of 7. For Model2_2, it is MA model, and based on its ACF we conclude it has a order of 1.
+
+```{r}
+Model_autofit <- auto.arima(ARMAmodel2_1)
+print(Model_autofit)
 
 ```
 
+```{r}
+Model_autofit <- auto.arima(ARMAmodel2_2)
+print(Model_autofit)
 
+```
+
+```{r}
+Model_autofit <- auto.arima(ARMAmodel2_3)
+print(Model_autofit)
+
+```
+
+The values computed by R are quite different from what we inspect from ACF and PACF graphs. The reasons might be we need to differentiate the models first.
 
 ## Q3
 
@@ -89,7 +184,12 @@ Consider the ARIMA model $y_t=0.7*y_{t-1}-0.25*y_{t-12}+a_t-0.1*a_{t-1}$
 
 (a) Identify the model using the notation ARIMA$(p,d,q)(P,D,Q)_ s$, i.e., identify the integers $p,d,q,P,D,Q,s$ (if possible) from the equation.
 
+p = 1, d=0, q=1.
+P=1, D=0, Q=0
+s=12
+
 (b) Also from the equation what are the values of the parameters, i.e., model coefficients. 
+phi=0.7, theta=0.1, seasonal phi=0.25
 
 
 ## Q4
@@ -97,6 +197,20 @@ Consider the ARIMA model $y_t=0.7*y_{t-1}-0.25*y_{t-12}+a_t-0.1*a_{t-1}$
 Plot the ACF and PACF of a seasonal ARIMA$(0, 1)\times(1, 0)_{12}$ model with $\phi =0 .8$ and $\theta = 0.5$ using R. The $12$ after the bracket tells you that $s=12$, i.e., the seasonal lag is 12, suggesting monthly data whose behavior is repeated every 12 months. You can generate as many observations as you like. Note the Integrated part was omitted. It means the series do not need differencing, therefore $d=D=0$. Plot ACF and PACF for the simulated data. Comment if the plots are well representing the model you simulated, i.e., would you be able to identify the order of both non-seasonal and seasonal components from the plots? Explain.
 
 ```{r}
+#install.packages("sarima")
 
+library(sarima)
 ```
+
+```{r}
+SARIMAmodel_4<- sim_sarima(model=list(ma=0.5,sar=0.8, nseasons=12), n=1000) 
+
+par(mfrow=c(1,2))
+ACF_Plot <- Acf(SARIMAmodel_4, lag = 40, 
+                main = "ACF SARIMAmodel")
+ACF_Plot <- Pacf(SARIMAmodel_4, lag = 40, 
+                main = "PACF SARIMAmodel_4")
+```
+
+I think the graphs allow us to clearly identify both seasonal component and non-seasonal component.Before lag 11 on ACF, we see lags are decaying, it is a AR model for the non-seasonal part.There are mulitple spikes afterwards, so we can tell it is a seasonal AR model.It has positive spikes at lag 12, 24... and single positive spike on PACF at lag12, so P = 1, Q = 0.
 
